fix(imports): simplify progressive upload status
